# insulator-diag

./: CMakeLists.txt  README.md
src/: BOWKmajorityTrainer.cpp  check_agast_kpts.cpp  check_akaze_kpts.cpp  check_desc_exist.cpp  check_sift_kpts.cpp  collect_desc.cpp  descriptor-filter-crosscheck.cpp  descriptor-filter-ratio-test.cpp  descriptor-filter.cpp  distance-minmax.cpp  predict.cpp  test_detector.cpp  train_svm.cpp  train_vocab.cpp  train_vocab_dist.cpp
